--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="d-flex justify-content-center align-items-center">
-                        <img src="img/home.png" alt="">
+                        <img src="../img/home.png" alt="">
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <!-- CARD 1 -->
                     <div class="cards mb-4">
                         <div class="position-relative">
-                            <img src="img/home.png" alt="" class="property-img">
+                            <img src="../img/home.png" alt="" class="property-img">
                             <div class="labels">
                                 <div class="label"> <i class="fa-regular fa-star"></i>Featured</div>
                                 <div class="label secondary">Whole House</div>
@@ -121,7 +121,7 @@
 
                             <div class="landlord-info">
                                 <div class="landlord-left">
-                                    <img src="img/home.png" alt="Landlord">
+                                    <img src="../img/home.png" alt="Landlord">
                                     <div>
                                         <div class="landlord-name">Jonathan Allen</div>
                                         <div class="landlord-role">Landlord</div>
@@ -140,7 +140,7 @@
                     <!-- CARD 2 -->
                     <div class="cards mb-4">
                         <div class="position-relative">
-                            <img src="img/home.png" alt="" class="property-img">
+                            <img src="../img/home.png" alt="" class="property-img">
                             <div class="labels">
                                 <div class="label"> <i class="fa-regular fa-star"></i>Featured</div>
                                 <div class="label secondary">Whole House</div>
@@ -167,7 +167,7 @@
 
                             <div class="landlord-info">
                                 <div class="landlord-left">
-                                    <img src="img/home.png" alt="Landlord">
+                                    <img src="../img/home.png" alt="Landlord">
                                     <div>
                                         <div class="landlord-name">Jonathan Allen</div>
                                         <div class="landlord-role">Landlord</div>
@@ -186,7 +186,7 @@
                     <!-- CARD 3 -->
                     <div class="cards mb-4">
                         <div class="position-relative">
-                            <img src="img/home.png" alt="" class="property-img">
+                            <img src="../img/home.png" alt="" class="property-img">
                             <div class="labels">
                                 <div class="label"> <i class="fa-regular fa-star"></i>Featured</div>
                                 <div class="label secondary">Whole House</div>
@@ -213,7 +213,7 @@
 
                             <div class="landlord-info">
                                 <div class="landlord-left">
-                                    <img src="img/home.png" alt="Landlord">
+                                    <img src="../img/home.png" alt="Landlord">
                                     <div>
                                         <div class="landlord-name">Jonathan Allen</div>
                                         <div class="landlord-role">Landlord</div>
@@ -311,7 +311,7 @@
     </footer>
 </body>
 <!-- MAIN JS -->
-<script src="js/script.js" defer></script>
+<script src="../js/script.js" defer></script>
 <!-- BS JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
