--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- BS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>CAPSTONE</title>
 </head>
 
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <!-- END NG ROW -->
-            <div class="d-flex justify-content-center align-items-center mt-4">
+            <div class="d-flex justify-content-center align-items-center mt-4 listing-btn">
                 <div class="btn main-button mt-4">Load More Properties </div>
             </div>
         </div>
@@ -311,7 +311,7 @@
     </footer>
 </body>
 <!-- MAIN JS -->
-<script src="../js/script.js" defer></script>
+<script src="script.js" defer></script>
 <!-- BS JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
