done landlord UI

--- a/LANDLORD/account.html
+++ b/LANDLORD/account.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>ACCOUNT</title>
     <style>
-        .account-page{
+        .landlord-page{
             margin-top: 140px !important;
         }
         .account-img img{
@@ -58,9 +58,9 @@
         </div>
     </header>
     <!-- ACCOUNT PAGE -->
-    <div class="account-page">
+    <div class="landlord-page">
         <div class="container m-auto">
-                <h1 class="mb-4">ACCOUNT</h1>
+                <h2 class="mb-4">ACCOUNT</h2>
             <div class="row gy-4 justify-content-center">
                 <div class="col-lg-4 col-sm-12">
                     <div class="account-img">
