--- a/LANDLORD/landlord-message.html
+++ b/LANDLORD/landlord-message.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>MESSAGE</title>
     <style>
-        .message-page{
+        .landlord-page{
             margin-top: 140px !important;
         }
         .side1{
@@ -79,9 +79,9 @@
         </div>
     </header>
     <!-- MESSAGES -->
-    <div class="message-page">
+    <div class="landlord-page">
         <div class="container m-auto">
-            <h1 class="my-4">Chats <i class="fa-solid fa-pen-to-square"></i></h1>
+            <h2 class="my-4">Chats <i class="fa-solid fa-pen-to-square"></i></h2>
             <div class="row chat-box">
                 <div class="col-lg-4 side1 overflow-y-scroll">
                     <input class="search-chats " type="text" placeholder=" Search Shats">
