--- a/LANDLORD/edit-property.html
+++ b/LANDLORD/edit-property.html
@@ -14,42 +14,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <title>EDIT ACCOUNT</title>
+    <title>EDIT PROPERTIES</title>
     <style>
         .landlord-page {
-            margin-top: 140px !important;
+            margin: 140px 0px 80px 0px !important;
         }
-
-        .edit {
-            border: 6px solid var(--border-color);
-            padding: 40px;
+        .add-property{
+            background-color: #0000ffb6;
+            color: white;
+            padding: 8px;
             border-radius: 20px;
-        }
-
-        .profile-img {
-            width: 120px;
-            height: 120px;
-            background-color: #d9d9d9;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            position: relative;
-            cursor: pointer;
-            overflow: hidden;
-            border: 2px solid var(--border-alt-color);
-        }
-
-        .profile-img img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-
-        .upload-input {
-            display: none;
         }
 
         .form-control {
@@ -69,50 +43,30 @@
             <li><a href="landlord-message.html">Messages</a></li>
             <li><a href="../support.html">Support</a></li>
         </ul>
-        <!-- SIGN UP -->
         <!-- NAV ICON / NAME -->
         <div class="nav-icons">
             <!-- DROP DOWN -->
             <div class="dropdown">
                 <i class="fa-solid fa-user"></i>
                 Landlord
-                <div class="dropdown-content">
-                    <a href="account.html">Account</a>
-                    <a href="settings.html">Settings</a>
-                    <a href="logout.html">Log out</a>
-                </div>
+					<div class="dropdown-content">
+					<a href="account.html">Account</a>
+					<a href="settings.html">Settings</a>
+					<a href="logout.html">Log out</a>
+					</div>
             </div>
             <!-- NAVMENU -->
             <div class="fa-solid fa-bars" id="navmenu"></div>
         </div>
     </header>
-    <!-- ACCOUNT PAGE -->
+    <!-- PROPERTY PAGE -->
     <div class="landlord-page">
         <div class="container m-auto">
-            <h2 class="mb-4">EDIT ACCOUNT</h2>
-            <div class="row gy-4 justify-content-center edit">
+                <h2>Edit Property</h2>
+            <div class="row gy-4 justify-content-center">
                 <div class="col-lg-8">
                     <!-- INFO FORRM -->
                     <form class="mt-4">
-                        <div class="row mb-3">
-                        <div class="col d-flex justify-content-center align-items-center">
-                        <!-- ADD PROFILE PICC -->
-                        <label class="profile-img" for="upload">
-                            <span id="profile-text">add img</span>
-                            <img id="preview" src="" alt="" style="display: none;">
-                            <input type="file" id="upload" class="upload-input" accept="image/*">
-                        </label>
-                    </div>
-                            <div class="col">
-                                <label class="form-label">Firstname</label>
-                                <input type="text" class="form-control">
-
-                                <label class="form-label">Lastname</label>
-                                <input type="text" class="form-control">
-                            </div>
-
-                        </div>
-
                         <div class="row mb-3">
                             <div class="col">
                                 <label class="form-label">Address</label>
@@ -126,49 +80,34 @@
                                 <input type="text" class="form-control">
                             </div>
                             <div class="col">
-                                <label class="form-label">Email</label>
+                                <label class="form-label">Number of Rooms</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col">
+                                <label class="form-label">Contact Number</label>
                                 <input type="text" class="form-control">
                             </div>
                         </div>
 
                         <div class="row mb-3">
                             <div class="col">
-                                <label class="form-label">Gender</label>
-                                <input type="text" class="form-control">
+                                <label class="form-label">Features</label>
+                                <textarea class="form-control"></textarea>
                             </div>
                             <div class="col">
-                                <label class="form-label">ANO TO?</label>
-                                <input type="text" class="form-control">
+                                <label class="form-label">Images</label>
+                                <input type="file" class="form-control" accept="image/*">
                             </div>
                         </div>
-                        <a href=""><button class="main-button mx-3">Save</button></a>
-                        <button class="main-button text-white"><a href="account.html">Cancel</a></button>
+                        <a href=""><button class="main-button mx-3">Edit property</button></a>
+                        <button class="main-button text-white"><a href="landlord-properties.html">Cancel</a></button>
 
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- INTERNAL JS -->
-    <script>
-        // IMG UPLOAD
-        const uploadInput = document.getElementById('upload');
-        const preview = document.getElementById('preview');
-        const profileText = document.getElementById('profile-text');
 
-        uploadInput.addEventListener('change', (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    preview.src = e.target.result;
-                    preview.style.display = 'block';
-                    profileText.style.display = 'none';
-                };
-                reader.readAsDataURL(file);
-            }
-        });
-    </script>
     <!-- MAIN JS -->
     <script src="../script.js" defer></script>
     <!-- BS JS -->
