--- a/LANDLORD/landlord-properties.html
+++ b/LANDLORD/landlord-properties.html
@@ -16,8 +16,14 @@
     <link rel="stylesheet" href="../style.css">
     <title>PROPERTIES</title>
     <style>
-        .property {
+        .landlord-page {
             margin: 140px 0px 80px 0px !important;
+        }
+        .add-property{
+            background-color: #0000ffb6;
+            color: white;
+            padding: 8px;
+            border-radius: 20px;
         }
 
         .available {
@@ -84,10 +90,11 @@
         </div>
     </header>
     <!-- PROPERTY PAGE -->
-    <div class="property">
+    <div class="landlord-page">
         <div class="container m-auto d-flex justify-content-between align-items-center">
             <h2>MY PROPERTIES</h2>
             <div class="d-flex">
+                <a href="add-property.html" class="add-property">Add Property</a>
                 <p class="mx-4 available">Available</p>
                 <p class="occupied">Occupied</p>
             </div>
@@ -129,7 +136,7 @@
                             <div class="property-edit">
                                 <div class="property-action d-flex justify-content-center">
                                     <div class="status-occupied mx-4"><i class="fa-solid fa-house-user"></i>Occupied</div>
-                                    <div class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</div>
+                                    <a href="edit-property.html" class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +176,7 @@
                             <div class="property-edit">
                                 <div class="property-action d-flex justify-content-center">
                                     <div class="status-occupied mx-4"><i class="fa-solid fa-house-user"></i>Occupied</div>
-                                    <div class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</div>
+                                    <a href="edit-property.html" class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</a>
                                 </div>
                             </div>
                         </div>
@@ -209,7 +216,7 @@
                             <div class="property-edit">
                                 <div class="property-action d-flex justify-content-center">
                                     <div class="status-available mx-4"><i class="fa-solid fa-house-user"></i>Available</div>
-                                    <div class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</div>
+                                    <a href="edit-property.html" class="edit mx-4"><i class="fa-solid fa-pen-to-square"></i>Edit</a>
                                 </div>
                             </div>
                         </div>
