--- a/LANDLORD/landlord.html
+++ b/LANDLORD/landlord.html
@@ -15,7 +15,13 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <title>HOME</title>
+    <style>
+        .landlord-page {
+            margin-top: 140px !important;
+        }
+    </style>
 </head>
+
 <body>
     <!-- HEADER -->
     <header>
@@ -31,25 +37,30 @@
         <div class="nav-icons">
             <!-- DROP DOWN -->
             <div class="dropdown">
-					<i class="fa-solid fa-user"></i>
-                    Landlord
-					<div class="dropdown-content">
-					<a href="account.html">Account</a>
-					<a href="settings.html">Settings</a>
-					<a href="logout.html">Log out</a>
-					</div>
-				</div>
+                <i class="fa-solid fa-user"></i>
+                Landlord
+                <div class="dropdown-content">
+                    <a href="account.html">Account</a>
+                    <a href="settings.html">Settings</a>
+                    <a href="logout.html">Log out</a>
+                </div>
+            </div>
             <!-- NAVMENU -->
             <div class="fa-solid fa-bars" id="navmenu"></div>
         </div>
     </header>
+    <div class="landlord-page">
+        <div class="container m-auto">
+            <h1>Welcome, Landlord!</h1>
+            <p>Manage your properties and connect with tenants easily.</p>
+        </div>
 
-<!-- MAIN JS -->
-<script src="../script.js" defer></script>
-<!-- BS JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
-<!-- SCROLL REVEAL -->
-<script src="https://unpkg.com/scrollreveal"></script>
+        <!-- MAIN JS -->
+        <script src="../script.js" defer></script>
+        <!-- BS JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"></script>
+        <!-- SCROLL REVEAL -->
+        <script src="https://unpkg.com/scrollreveal"></script>
 </body>
