fixed minor bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- SIGN UP -->
         <div class="nav-icons">
             <i class="fa-solid fa-user"></i>
-            <a href="">Sign In</a>
+            <a href="/LOGIN/signup.html">Sign In</a>
             <!-- NAVMENU -->
             <div class="fa-solid fa-bars" id="navmenu"></div>
         </div>
@@ -58,21 +58,21 @@
         <div class="container m-auto">
             <h3 class="text-center mb-4">Convenient and Efficient House<br>Searching</h3>
             <div class="row gy-5">
-                <div class="col-lg-4 col-sm-12 text-center info">
+                <div class="col-lg-4 col-sm-12 text-center info-animation mb-5">
                     <div class="info-icons d-flex justify-content-center mb-4"><i class="fa-solid fa-comments"></i>
                     </div>
                     <p>Real-Time Communication</p> <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in, alias illum deleniti
                         reprehenderit repellendus eveniet officia modi iusto rerum.</p>
                 </div>
-                <div class="col-lg-4 col-sm-12 text-center info">
+                <div class="col-lg-4 col-sm-12 text-center info-animation mb-5">
                     <div class="info-icons d-flex justify-content-center mb-4"><i class="fa-solid fa-user-check"></i>
                     </div>
                     <p>Verified and Updated Listing</p> <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in, alias illum deleniti
                         reprehenderit repellendus eveniet officia modi iusto rerum.</p>
                 </div>
-                <div class="col-lg-4 col-sm-12 text-center info">
+                <div class="col-lg-4 col-sm-12 text-center info-animation mb-5">
                     <div class="info-icons d-flex justify-content-center mb-4"><i class="fa-solid fa-location-dot"></i>
                     </div>
                     <p>Mapping</p> <br>
@@ -230,8 +230,8 @@
                 </div>
             </div>
             <!-- END NG ROW -->
-            <div class="d-flex justify-content-center align-items-center mt-4 listing-btn">
-                <div class="btn main-button mt-4">Load More Properties </div>
+            <div class="d-flex justify-content-center align-items-center mt-4 button-animation">
+                <div class="main-button mt-4">Load More Properties </div>
             </div>
         </div>
     </section>
