--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <a href="#" class="logo"><i class="fa-solid fa-house-medical-circle-check"></i>Tahanan</a>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="img/logo.png" alt="">Tahanan</a>
 
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
