--- a/TENANT/tenant-home.html
+++ b/TENANT/tenant-home.html
@@ -176,6 +176,7 @@
             </div>
         </div>
     </div>
+    <div class="moree"></div>
 
     <!-- MAIN JS -->
     <script src="../script.js" defer></script>
