--- a/LANDLORD/account.html
+++ b/LANDLORD/account.html
@@ -32,7 +32,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <a href="#" class="logo"><i class="fa-solid fa-house-medical-circle-check"></i>Tahanan</a>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
 
         <ul class="nav-links">
             <li><a href="landlord.html">Home</a></li>
