--- a/TENANT/edit-account.html
+++ b/TENANT/edit-account.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>EDIT ACCOUNT</title>
     <style>
-        .landlord-page {
+        .tenant-page {
             margin-top: 140px !important;
         }
 
@@ -64,20 +64,20 @@
         <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
 
         <ul class="nav-links">
-            <li><a href="landlord.html">Home</a></li>
-            <li><a href="landlord-properties.html">Properties</a></li>
-            <li><a href="landlord-message.html">Messages</a></li>
+            <li><a href="tenant.html">Home</a></li>
+            <li><a href="tenant-rental.html">My Rental</a></li>
+            <li><a href="tenant-favorite.html">Favorite</a></li>
+            <li><a href="tenant-messages.html">Messages</a></li>
             <li><a href="../support.html">Support</a></li>
         </ul>
-        <!-- SIGN UP -->
         <!-- NAV ICON / NAME -->
         <div class="nav-icons">
             <!-- DROP DOWN -->
             <div class="dropdown">
                 <i class="fa-solid fa-user"></i>
-                Landlord
+                Tenant
                 <div class="dropdown-content">
-                    <a href="account.html">Account</a>
+                    <a href="tenant-profile.html">Account</a>
                     <a href="settings.html">Settings</a>
                     <a href="logout.html">Log out</a>
                 </div>
@@ -87,7 +87,7 @@
         </div>
     </header>
     <!-- ACCOUNT PAGE -->
-    <div class="landlord-page">
+    <div class="tenant-page">
         <div class="container m-auto">
             <h2 class="mb-4">EDIT ACCOUNT</h2>
             <div class="row gy-4 justify-content-center edit">
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <a href=""><button class="main-button mx-3">Save</button></a>
-                        <button class="main-button text-white"><a href="account.html">Cancel</a></button>
+                        <button class="main-button text-white"><a href="tenant-profile.html">Cancel</a></button>
 
                     </form>
                 </div>
