--- a/LANDLORD/landlord.html
+++ b/LANDLORD/landlord.html
@@ -25,12 +25,12 @@
 <body>
     <!-- HEADER -->
     <header>
-        <a href="#" class="logo"><i class="fa-solid fa-house-medical-circle-check"></i>Tahanan</a>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
 
         <ul class="nav-links">
             <li><a href="landlord.html" class="active">Home</a></li>
             <li><a href="landlord-properties.html">Properties</a></li>
-            <li><a href="#home-listing">Messages</a></li>
+            <li><a href="landlord-message.html">Messages</a></li>
             <li><a href="../support.html">Support</a></li>
         </ul>
         <!-- NAV ICON / NAME -->
@@ -53,6 +53,7 @@
         <div class="container m-auto">
             <h1>Welcome, Landlord!</h1>
             <p>Manage your properties and connect with tenants easily.</p>
+            <p>DITO KANA MAG START NG CONTENT, INSIDE THIS LANDLORD PAGE DIV</p>
         </div>
 
         <!-- MAIN JS -->
