--- a/TENANT/tenant-messages.html
+++ b/TENANT/tenant-messages.html
@@ -1,100 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!DOCTYPE html>
-<html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="tenant.css">
-    <title>Tenant – Messages</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- FA -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- BS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style.css">
+    <title>TENANT MESSAGE</title>
+    <style>
+        .tenant-page {
+            margin-top: 140px !important;
+        }
+        .side1{
+            background-color: var(--border-color);
+            height: 500px;
+            border-top-left-radius: 20px;
+        }
+        .side2{
+            background-color: var(--button-color);
+            height: 500px;
+            border-top-right-radius: 20px;
+        }
+        .search-chats{
+            width: 390px;
+            height: 40px;
+            margin-top: 20px !important;
+            padding: 20px;
+            border-radius: 20px;
+            background-color: #cfcfcf;
+            color: white;
+            font-size: 14px;
+        }
+        .convo{
+            background-color: var(--button-color);
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        .convo img{
+            width: 100px;
+            clip-path: circle();
+        }
+    </style>
 </head>
-<div class="Messages" style="padding-top:150px">
-    <div class="container m-auto d-flex justify-content-between align-items-center">
-        <div class="d-flex">
-        </div>
-    </div>
-</div>
-
 
 <body>
-    <!-- NAVBAR -->
-    <header class="main-header">
-        <a href="#" class="logo"><i class="fa-solid fa-house"></i>Tahanan</a>
+    <!-- HEADER -->
+    <header>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
+
         <ul class="nav-links">
-            <li><a href="tenant-home.html">Home</a></li>
-            <li><a href="tenant-profile.html">Profile</a></li>
+            <li><a href="tenant.html">Home</a></li>
+            <li><a href="tenant-rental.html">My Rental</a></li>
             <li><a href="tenant-favorite.html">Favorite</a></li>
-            <li><a href="tenant-messages.html">Messages</a></li>
+            <li><a href="tenant-messages.html" class="active">Messages</a></li>
+            <li><a href="../support.html">Support</a></li>
         </ul>
+        <!-- NAV ICON / NAME -->
         <div class="nav-icons">
+            <!-- DROP DOWN -->
             <div class="dropdown">
                 <i class="fa-solid fa-user"></i>
-                Tenant
+                Landlord
                 <div class="dropdown-content">
-                    <a href="#">Account</a>
-                    <a href="#">Settings</a>
-                    <a href="#">Log out</a>
+                    <a href="tenant-profile.html">Account</a>
+                    <a href="settings.html">Settings</a>
+                    <a href="logout.html">Log out</a>
                 </div>
             </div>
+            <!-- NAVMENU -->
+            <div class="fa-solid fa-bars" id="navmenu"></div>
         </div>
     </header>
-
-
-    <!-- MAIN CONTENT -->
-    <main class="tenant-messages">
-        <div class="tenant-messages-container">
-            <!-- Sidebar -->
-            <div class="chats-sidebar">
-                <h5>Chats</h5>
-                <input type="text" class="form-control mb-3" placeholder="Search Chats">
-                <div class="chat-item d-flex align-items-center p-2 mb-2">
-                    <img src="ll3.png" alt="User" class="rounded-circle me-2">
-                    <div>
-                        <strong>Rey Abella</strong>
-                        <p class="mb-0 text-muted">Lorem ipsum</p>
+    <!-- TENANT MSG CONTENT -->
+    <div class="tenant-page">
+        <div class="container m-auto">
+            <h2 class="my-4">Chats <i class="fa-solid fa-pen-to-square"></i></h2>
+            <div class="row chat-box">
+                <div class="col-lg-4 side1 overflow-y-scroll">
+                    <input class="search-chats " type="text" placeholder=" Search Shats">
+                    <div class="convo my-2 d-flex justify-content-start align-items-center">
+                        <img src="../img/home.png" alt="">
+                        <h4>Sam Sulek</h4>
+                    </div>
+                    <div class="convo my-2 d-flex justify-content-start align-items-center">
+                        <img src="../img/home.png" alt="">
+                        <h4>Berhel Reyes</h4>
                     </div>
                 </div>
-
-
-                <div class="chat-item d-flex align-items-center p-2 mb-2">
-                    <img src="ll4.jfif" alt="User" class="rounded-circle me-2">
-                    <div>
-                        <strong>John Mayer</strong>
-                        <p class="mb-0 text-muted">Lorem ipsum</p>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-            <!-- Chat Window -->
-            <div class="chat-window">
-                <div class="chat-box">
-                    <p class="text-muted">Select a chat to start messaging</p>
+                <div class="col-lg-8 side2 overflow-y-scroll">
+                    <!-- ANO ILALAGAY KO DINE???? -->
                 </div>
             </div>
         </div>
-    </main>
-
-
-    <script>
-        const currentPage = window.location.pathname.split("/").pop();
-        document.querySelectorAll(".nav-links a").forEach(link => {
-            if (link.getAttribute("href") === currentPage) {
-                link.classList.add("active");
-            } else {
-                link.classList.remove("active");
-            }
-        });
-    </script>
+    </div>
+<!-- MAIN JS -->
+<script src="../script.js" defer></script>
+<!-- BS JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+<!-- SCROLL REVEAL -->
+<script src="https://unpkg.com/scrollreveal"></script>
 
 
 </body>
