--- a/TENANT/tenant-profile.html
+++ b/TENANT/tenant-profile.html
@@ -4,94 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="tenant.css">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- FA -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- BS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style.css">
+    <title>ACCOUNT</title>
+    <style>
+        .tenant-page {
+            margin-top: 140px !important;
+        }
+
+        .account-img img {
+            clip-path: circle();
+        }
+
+        .account-details {
+            border: 6px solid var(--border-color);
+            padding: 50px;
+            border-radius: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- NAVBAR -->
-    <header class="main-header">
-        <a href="#" class="logo"><i class="fa-solid fa-house"></i>Tahanan</a>
+    <!-- HEADER -->
+    <header>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
+
+
         <ul class="nav-links">
-            <li><a href="tenant-home.html" class=>Home</a></li>
-            <li><a href="tenant-profile.html">Profile</a></li>
+            <li><a href="tenant.html">Home</a></li>
+            <li><a href="tenant-rental.html">My Rental</a></li>
             <li><a href="tenant-favorite.html">Favorite</a></li>
-            <li><a href="tenant-messages.html">Messages</a></li>
+            <li><a href="tenant-message.html">Messages</a></li>
+            <li><a href="../support.html">Support</a></li>
         </ul>
+        <!-- SIGN UP -->
+        <!-- NAV ICON / NAME -->
         <div class="nav-icons">
+            <!-- DROP DOWN -->
             <div class="dropdown">
                 <i class="fa-solid fa-user"></i>
                 Tenant
                 <div class="dropdown-content">
-                    <a href="#">Account</a>
-                    <a href="#">Settings</a>
-                    <a href="#">Log out</a>
+                    <a href="tenant-profile.html">Account</a>
+                    <a href="settings.html">Settings</a>
+                    <a href="logout.html">Log out</a>
+                </div>
+            </div>
+            <!-- NAVMENU -->
+            <div class="fa-solid fa-bars" id="navmenu"></div>
+        </div>
+    </header>
+    <!-- ACCOUNT PAGE -->
+    <div class="tenant-page">
+        <div class="container m-auto">
+            <h2 class="mb-4">ACCOUNT</h2>
+            <div class="row gy-4 justify-content-center">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="account-img">
+                        <img src="/img/home.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="account-details">
+                        <h1>Jonathan Mina</h1>
+                        <p>Phone Number: 09123456789</p>
+                        <p>Email: tenant@gmail.com</p>
+                        <p>Joined Date: 09-09-2005</p>
+                        <div class="account-action d-flex justify-content-end">
+                            <a href="edit-account.html" class="main-button">Edit</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
-
-    <div class="favorite-page" style="padding-top:150px">
-        <div class="container m-auto d-flex justify-content-between align-items-center">
-            <div class="d-flex">
-            </div>
-        </div>
     </div>
-
-  <!-- PROFILE CONTENT -->
-  <section class="tenant-profile">
-    <div class="profile-container">
-      <div class="profile-img-wrapper">
-        <div class="profile-img">img</div>
-      </div>
-
-      <div class="profile-info">
-        <h2>Samuel alcazar</h2>
-        <p>Account type: Tenant</p>
-        <p>Phone Number: 09896796668</p>
-        <p>Email: labubut.com</p>
-        <p>Joined date: July 45. 2025</p>
-        <button class="edit-btn">Edit</button>
-      </div>
-    </div>
-
-    <div class="upload-section">
-      <label>Upload Profile Picture</label>
-      <div class="upload-line"></div>
-
-      <!-- Image Upload-->
-      <input type="file" id="fileInput" style="display:none" accept="image/*">
-
-      <button class="upload-btn" id="uploadBtn">Upload Photo</button>
-    </div>
-  </section>
-
-  <footer class="ads">ADS</footer>
-
-  <script>
-    // make Upload Photo open file manager
-    const uploadBtn = document.getElementById('uploadBtn');
-    const fileInput = document.getElementById('fileInput');
-
-    uploadBtn.addEventListener('click', () => {
-      fileInput.click();
-    });
-
-    fileInput.addEventListener('change', (event) => {
-      console.log(event.target.files[0]);
-    });
-  </script>
-
-  <script>
-    const currentPage = window.location.pathname.split("/").pop();
-    document.querySelectorAll(".nav-links a").forEach(link => {
-        if (link.getAttribute("href") === currentPage) {
-            link.classList.add("active");
-        } else {
-            link.classList.remove("active");
-        }
-    });</script>
-
 </body>
+<!-- MAIN JS -->
+<script src="../script.js" defer></script>
+<!-- BS JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+<!-- SCROLL REVEAL -->
+<script src="https://unpkg.com/scrollreveal"></script>
+
 </html>
