--- a/TENANT/tenant-rental.html
+++ b/TENANT/tenant-rental.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
-    <title>FAVORITE</title>
+    <title>HOME</title>
     <style>
         .tenant-page {
             margin-top: 140px !important;
@@ -29,8 +29,8 @@
 
         <ul class="nav-links">
             <li><a href="tenant.html">Home</a></li>
-            <li><a href="tenant-rental.html">My Rental</a></li>
-            <li><a href="tenant-favorite.html" class="active">Favorite</a></li>
+            <li><a href="tenant-rental.html" class="active">My Rental</a></li>
+            <li><a href="tenant-favorite.html">Favorite</a></li>
             <li><a href="tenant-messages.html">Messages</a></li>
             <li><a href="../support.html">Support</a></li>
         </ul>
@@ -50,14 +50,14 @@
             <div class="fa-solid fa-bars" id="navmenu"></div>
         </div>
     </header>
-    <!-- FAVORITE PAGE CONTENT -->
+
+    <!-- HOME PAGE CONTENT -->
     <div class="tenant-page">
         <div class="container m-auto">
-            <h2>Favorites</h2>
+            <h2>Tenant Rental</h2>
             <p>DITO KANA MAG START NG CONTENT, INSIDE THIS TENANT PAGE DIV</p>
         </div>
     </div>
-
 
     <!-- MAIN JS -->
     <script src="../script.js" defer></script>
