Updated Login Form

--- a/LOGIN/signup.html
+++ b/LOGIN/signup.html
@@ -68,7 +68,7 @@
                     <i class="fa-solid fa-key"></i>
                 </div>
                 <div class="terms">
-                    <input type="checkbox"> I agree with Terms and Condition
+                    <input type="checkbox"> I agree with <a href="">Terms and Condition</a>
                 </div>
                 <button type="submit" class="btn signup">Sign Up</button><br><br>
                 <div class="socials">
