--- a/LANDLORD/landlord-properties.html
+++ b/LANDLORD/landlord-properties.html
@@ -94,7 +94,7 @@
         <div class="container m-auto d-flex justify-content-between align-items-center">
             <h2>MY PROPERTIES</h2>
             <div class="d-flex">
-                <a href="add-property.html" class="add-property">Add Property</a>
+                <a href="add-property.php" class="add-property">Add Property</a>
                 <p class="mx-4 available">Available</p>
                 <p class="occupied">Occupied</p>
             </div>
