admin v2 sa main

--- a/LANDLORD/landlord-message.html
+++ b/LANDLORD/landlord-message.html
@@ -15,41 +15,10 @@
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="../css/style.css">
     <title>MESSAGE</title>
-    <style>
-        .landlord-page{
-            margin-top: 140px !important;
-        }
-        .side1{
-            background-color: var(--border-color);
-            height: 500px;
-            border-top-left-radius: 20px;
-        }
-        .side2{
-            background-color: var(--button-color);
-            height: 500px;
-            border-top-right-radius: 20px;
-        }
-        .search-chats{
-            width: 390px;
-            height: 40px;
-            margin-top: 20px !important;
-            padding: 20px;
-            border-radius: 20px;
-            background-color: #cfcfcf;
-            color: white;
-            font-size: 14px;
-        }
-        .convo{
-            background-color: var(--button-color);
-            border-radius: 10px;
-            cursor: pointer;
-        }
-        .convo img{
-            width: 100px;
-            clip-path: circle();
-        }
-    </style>
+    <link rel="stylesheet" href="ll-messages.css">
 </head>
+
+
 <body>
     <!-- HEADER -->
     <header>
