--- a/LANDLORD/landlord-message.html
+++ b/LANDLORD/landlord-message.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="ll-messages.css">
 </head>
 
-
 <body>
     <!-- HEADER -->
     <header>
@@ -64,7 +63,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 side2 overflow-y-scroll">
-                    <!-- ANO ILALAGAY KO DINE???? -->
+                    <!-- ANO ILALAGAY KO DINE????.. ewan ko po ateee -->
                 </div>
             </div>
         </div>
