--- a/TENANT/tenant-rental.html
+++ b/TENANT/tenant-rental.html
@@ -25,7 +25,8 @@
 <body>
     <!-- HEADER -->
     <header>
-        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png" alt="">Tahanan</a>
+        <a href="#" class="logo d-flex justify-content-center align-items-center"><img src="../img/logo.png"
+                alt="">Tahanan</a>
 
         <ul class="nav-links">
             <li><a href="tenant.html">Home</a></li>
@@ -59,12 +60,12 @@
         </div>
     </div>
 
-<!-- MAIN JS -->
-<script src="../js/script.js" defer></script>
-<!-- BS JS -->
-<script src="../js/bootstrap.bundle.min.js"></script>
-<!-- SCROLL REVEAL -->
-<script src="https://unpkg.com/scrollreveal"></script>
+    <!-- MAIN JS -->
+    <script src="../js/script.js" defer></script>
+    <!-- BS JS -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <!-- SCROLL REVEAL -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 </body>
 
 </html>
