--- a/ADMIN/verify.html
+++ b/ADMIN/verify.html
@@ -25,7 +25,7 @@
 
       </div>
 
-      <i class='bxr bx-chevron-right toggle'></i> 
+      <i class='bxr bx-chevron-right toggle'></i>
     </header>
 
     <div class="menu-bar">
@@ -33,31 +33,31 @@
         <ul class="menu-links">
           <li class="nav-link">
             <a href="homepage.html">
-              <i class='bxr  bx-home icon'  ></i> 
+              <i class='bxr  bx-home icon'></i>
               <span class="text nav-text">Home</span>
             </a>
           </li>
           <li class="nav-link">
             <a href="account.html">
-              <i class='bxr  bx-user icon'  ></i>  
+              <i class='bxr  bx-user icon'></i>
               <span class="text nav-text">Accounts</span>
             </a>
           </li>
           <li class="nav-link">
             <a href="report.html">
-              <i class='bxr  bx-alert-circle icon'  ></i>  
+              <i class='bxr  bx-alert-circle icon'></i>
               <span class="text nav-text">Reports</span>
             </a>
           </li>
           <li class="nav-link">
             <a href="listing.html">
-              <i class='bxr  bx-list-ul icon'  ></i>   
+              <i class='bxr  bx-list-ul icon'></i>
               <span class="text nav-text">Listing</span>
             </a>
           </li>
           <li class="nav-link">
             <a href="verify.html">
-              <i class='bxr  bx-check-circle icon'  ></i>  
+              <i class='bxr  bx-check-circle icon'></i>
               <span class="text nav-text">Verify Landlord</span>
             </a>
           </li>
@@ -66,18 +66,18 @@
 
       <div class="bottom-content">
         <li class="">
-            <a href="#">
-              <i class='bxr  bx-arrow-out-left-square-half icon'  ></i>   
-              <span class="text nav-text">Logout</span>
-            </a>
-          </li>
+          <a href="#">
+            <i class='bxr  bx-arrow-out-left-square-half icon'></i>
+            <span class="text nav-text">Logout</span>
+          </a>
+        </li>
       </div>
     </div>
   </nav>
 
   <!-- SIDEBAR -->
 
-   <main class="content">
+  <main class="content">
     <header class="page-header">
       <h1>Verify Landlord Requests</h1>
       <p>Review and approve or reject landlord applications</p>
@@ -86,7 +86,7 @@
     <section class="verify-list">
       <!-- Card 1 -->
       <div class="verify-card">
-        <img src="/img/pogi1.jpg" alt="Landlord" class="profile-pic">
+        <img src="../img/pogi1.jpg" alt="Landlord" class="profile-pic">
         <div class="details">
           <h3>Rey</h3>
           <p>Email: rey@example.com</p>
@@ -100,7 +100,7 @@
 
       <!-- Card 2 -->
       <div class="verify-card">
-        <img src="/img/pogi2.jpg" alt="Landlord" class="profile-pic">
+        <img src="../img/pogi2.jpg" alt="Landlord" class="profile-pic">
         <div class="details">
           <h3>Berhel</h3>
           <p>Email: berhel@example.com</p>
@@ -115,9 +115,9 @@
       <!-- Repeat for more requests -->
     </section>
   </main>
-  
+
   <script src="sidebar.js"></script>
 
 </body>
-  
-</html> 
+
+</html>
